change the reply guard implementation
